# digitex-bot-framework

./: README.md  pyproject.toml
digitex_bot_framework/: __init__.py  bot.py  currency_pair.py  enums.py  market.py  order.py  order_book.py  position.py  tick.py  trade.py  trader.py  util.py
examples/: order-book-mover.py  simple-bot.py  switcher.py
