[tool.poetry]
name = "digitex-bot-framework"
version = "1.0.0-release"
description = "Digitex Bot Framework"
authors = ["Sergey Bugaev <bugaevc@smartdec.com>"]

[tool.poetry.dependencies]
python = "^3.8"
digitex-engine-client = "^3.135.*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
